optimized_model.py存在数据泄露问题；v2是对其数据泄露的修改

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /hull-tactical-market-prediction/train.csv
 /hull-tactical-market-prediction/test.csv
+/hull-tactical-market-prediction/model_transformer.py
